exports[`mapToData should return fallback -ko- 1`] = `
Array [
  Object {
    "done": true,
    "value": Object {
      "fallback": true,
    },
  },
]
`;

exports[`mapToData should return result -ko- 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "data": true,
    },
  },
  Object {
    "done": true,
    "value": Object {
      "data": true,
    },
  },
]
`;

exports[`mapToData should return result -ok- 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "data": true,
    },
  },
  Object {
    "done": true,
    "value": Object {
      "data": true,
    },
  },
]
`;

exports[`mapToData should return undefined -code 204 no content- 1`] = `
Array [
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`mapToData should return undefined with json parse on error 1`] = `
Array [
  Object {
    "done": true,
    "value": undefined,
  },
]
`;
